--- a/style.css
+++ b/style.css
@@ -143,17 +143,54 @@ body {
     border-radius: 0 0 5px 5px;
 }
 
-
-#mtTecnologia{
-    
-    display: inline-block;
-    border: 5px solid black;    
-    width: 75vw;
+#materie{
+    margin: 0 0;
+    padding: 0 0;
 }
 
+#mtTecnologia{
+    position: relative;
+    z-index: 1;
+    margin-top: 25px;
+    display: inline-block;
+   
+    margin-left: 2.1vw;
+    border: 5px solid black;    
+    width: 75vw;
+    min-height: 50vh;
+    
+}
 
+#mtTecnoHeader{
+    position: relative;
+    margin: 0 auto;
+    margin-top: 5px;
+    width: 99%;
+    min-height: 10px;
+    text-align: center;
+    border: 5px solid rgb(32, 113, 43);
+    border-radius: 30px;
+    background-color: rgb(84, 123, 88);
+    font-size: x-large;
+}
 
 #ctImmagini{
+    margin-top: 50px;
     display: flex;
-    gap: 20px;
+    justify-content: space-evenly;
+    
+}
+
+#mtTP1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 3em;
+    text-align: center;
+    width: 400px;
+    height: 300px;
+    background-size: cover;
+    background-image: url(fotoganiga_d8.jpg);
+    image-resolution: from-image;
+
 }
