--- a/style.css
+++ b/style.css
@@ -187,8 +187,8 @@ body {
     justify-content: center;
     font-size: 3em;
     text-align: center;
-    width: 400px;
-    height: 300px;
+    min-width: 400px;
+    min-height: 300px;
     background-size: cover;
     background-image: url(fotoganiga_d8.jpg);
     image-resolution: from-image;
