--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ body {
 }
 
 
-#a{
+.a{
     text-decoration: none;
     color: white;
 }
@@ -138,7 +138,7 @@ body {
 .sottoIndice {
     width: 100%;
     background-size: contain;
-    background-color: black;
+    background-image: url(download-_4_.png);
     height: 90px;
     border-radius: 0 0 5px 5px;
 }
@@ -157,31 +157,33 @@ body {
     margin-left: 2.1vw;
     border: 5px solid black;    
     width: 75vw;
-    min-height: 50vh;
+    min-height: 60vh;
     
 }
 
 #mtTecnoHeader{
     position: relative;
     margin: 0 auto;
-    margin-top: 5px;
-    width: 99%;
+    margin-top: 10px;
+    width: 95%;
     min-height: 10px;
     text-align: center;
-    border: 5px solid rgb(32, 113, 43);
+    border: 5px solid rgb(0, 0, 0);
     border-radius: 30px;
-    background-color: rgb(84, 123, 88);
+    background: #53914c;
+    background: linear-gradient(241deg, rgba(83, 145, 76, 1) 40%, rgba(51, 74, 74, 1) 83%);
     font-size: x-large;
 }
 
 #ctImmagini{
     margin-top: 50px;
     display: flex;
+    align-items: center;
     justify-content: space-evenly;
-    
+    margin-bottom: 10px;
 }
 
-#mtTP1{
+.mtTP1{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -190,7 +192,16 @@ body {
     min-width: 400px;
     min-height: 300px;
     background-size: cover;
-    background-image: url(fotoganiga_d8.jpg);
+    background-image: url(download-_4_.png);
+    background-size: cover;
+    background-repeat: no-repeat;
     image-resolution: from-image;
 
+}
+
+.P1{
+    display: none;
+    font-size: medium;
+    text-align: center;
+    max-width: 200px;
 }
