--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
     margin: 0 auto; 
     border-radius: 5px 5px 0 0;
     width: 80vw;
-    height:  2000px;
+    
     background-color: rgb(255, 255, 255);
 }
 
@@ -151,7 +151,7 @@ body {
 #mtTecnologia{
     position: relative;
     z-index: 1;
-    margin-top: 25px;
+    margin-top: 20vh;
     display: inline-block;
    
     margin-left: 2.1vw;
@@ -204,4 +204,60 @@ body {
     font-size: medium;
     text-align: center;
     max-width: 200px;
+}
+
+
+#mtLet{
+    margin-top: 41vh;
+    border: 5px solid rgb(19, 19, 19);
+    border-left: 2px solid black;
+}
+
+#cerchio{
+    
+   display: flex;
+   align-items: center;
+    border: 5px solid rgb(0, 68, 0);
+    background-color: rgb(45, 136, 45);
+    height: 800px;
+    width: 600px;
+    border-radius: 0 450px 450px 0;
+    
+}
+
+#fLet{
+   
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+#mtLetH{
+    margin-left: 50px;
+    display: inline-block;
+    border: 5px solid rgb(255, 255, 255);
+    background-color: white;
+    font-family: 'Playwrite CU';
+    font-size: xx-large;
+    max-width: 400px;
+    text-align: center;
+    border-radius: 5px;
+}
+
+#imgLet{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    
+    
+    margin: auto 100px;
+    
+}
+
+.imgLet1{
+    background-image: url(download-_4_.png);
+    min-width: 500px;
+    min-height: 350px;
+    background-size: cover;
+    
 }
